--- a/.gitignore
+++ b/.gitignore
@@ -99,10 +99,11 @@ dbauth.py
 **/migrations/**
 !**/migrations
 !**/migrations/__init__.py
+*.xml
+**/*.xml
 
 # Test XML files
 RetrieveHiresXML.xml
 
 # Mac spam
 .DS_Store
-
