--- a/akbash_circle_settings.ini
+++ b/akbash_circle_settings.ini
@@ -1,5 +1,6 @@
 [secrets]
 SECRET_KEY: nf!6t5vm0#&d-j)kdev_5aco^9$2@b%3-6b$h7x72x01og3s4@
+TALENTED_API_KEY: TALENTEDAPI
 
 [default database]
 DATABASE_ENGINE: django.db.backends.sqlite3
