updated akbash_circle_settings.ini for new database configuration

--- a/akbash_circle_settings.ini
+++ b/akbash_circle_settings.ini
@@ -3,8 +3,8 @@ SECRET_KEY: nf!6t5vm0#&d-j)kdev_5aco^9$2@b%3-6b$h7x72x01og3s4@
 TALENTED_API_KEY: TALENTEDAPI
 
 [default database]
-DATABASE_ENGINE: django.db.backends.sqlite3
-DATABASE_NAME: db.sqlite3
+ENGINE: django.db.backends.sqlite3
+NAME: db.sqlite3
 
 [debug]
 DEBUG: True
