Add [visions database] section to the circleci ini file.

--- a/akbash_circle_settings.ini
+++ b/akbash_circle_settings.ini
@@ -6,5 +6,11 @@ TALENTED_API_KEY: TALENTEDAPI
 ENGINE: django.db.backends.sqlite3
 NAME: db.sqlite3
 
+[visions database]
+NAME: dbname
+USER: username
+PASSWORD: password
+OPTIONS-DSN: dsn
+
 [debug]
 DEBUG: True
