Fix for LDAP settings in CircleCI

--- a/akbash_circle_settings.ini
+++ b/akbash_circle_settings.ini
@@ -14,3 +14,10 @@ OPTIONS-DSN: dsn
 
 [debug]
 DEBUG: True
+
+[ldap]
+LDAP_SERVER: ad_server.example.com
+LDAP_DOMAIN: example.com
+LDAP_USER: username
+LDAP_PASSWORD: password
+LDAP_SEARCH_BASE: dc=example,dc=com
