Updated the Circle private settings file to include the synergy database

--- a/akbash_circle_settings.ini
+++ b/akbash_circle_settings.ini
@@ -12,6 +12,12 @@ USER: username
 PASSWORD: password
 OPTIONS-DSN: dsn
 
+[synergy database]
+NAME: dbname
+USER: username
+PASSWORD: password
+OPTIONS-DSN: dsn
+
 [debug]
 DEBUG: True
 
