--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,6 @@ machine:
     version: 3.6.0
   environment:
     AKBASH_CONFIG_FILE: akbash_circle_settings.ini
+	post:
+    - akjob/akjobd.py:
+          background: true
